# numerical-methods

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
lab01/: README.md  lab1.tex
lab01/output/: series_fixed_precision.txt
lab01/src/: precision.cpp  precision.py
lab02/: README.md
lab02/output/: bisec.txt
lab02/src/: bisec.py  implicit.py  utils.py
lab03/: README.md
lab03/outputs/: cond_precision.txt  matrix_precision.txt  tridiagonal_matrix.txt
lab03/src/: cond_precision.py  matrix_precision.py  tridiagonal_matrix.py
lab04/: README.md
lab04/src/: nonlinear_newton.py  optimize.py  point_distances.py
lab05/: README.md
lab05/output/: seidel.txt  simple_iterative.txt
lab05/src/: seidel.py  simple_iterative.py  solve.py  sparse_matrix.py
lab06/: README.md
lab06/output/: material_point.txt
lab06/src/: least_squares.py  material_point.py  piecewise_linear.py  spline.py
lab07/: README.md
lab07/output/: eyler_vs_rk.txt
lab07/src/: adams_vs_rk.py  eyler_vs_rk.py  ode.py
lab1/src/: quadratic_eq.py
labs/lab01/output/: precision_cpp.txt  series.txt
labs/lab01/src/: series_fixed_precision.py
labs/lab02/output/: implicit.txt  newton.txt
labs/lab02/src/: bisec.py  newton.py
labs/lab03/output/: matrix_precision.txt  tridiagonal_matrix.txt
labs/lab03/src/: tridiagonal_matrix.py
labs/lab04/: README.md
labs/lab04/output/: nonlinear_newton.txt  point_distances.txt
labs/lab04/src/: point_distances.py
labs/lab05/output/: seidel.txt  sparse_seidel.txt
labs/lab05/src/: seidel.py  sparse_matrix.py  sparse_seidel.py
labs/lab06/src/: least_squares.py  material_point.py
labs/lab07/: lab07.tex
labs/lab07/output/: adaptive_step.txt  eyler_vs_rk.txt
labs/lab07/src/: adams_vs_rk.py  adaptive_step.py  eyler_vs_rk.py  ode.py
labs/lab09/: README.md
labs/lab09/output/: conjucate_grad.txt  newton2d.txt
labs/lab09/src/: conjucate_grad.py  newton.py  newton2d.py  optimize.py  search_optimize.py
labs/lab1/: README.md  lab1.tex  precision.cpp  precision.py  quadratic_eq.py  series.py  series_fixed_precision.py
labs/lab1/output/: precision.txt  quadratic_eq.txt
labs/lab1/src/: series.py
labs/lab10/: README.md
labs/lab10/output/: finite_diff.txt  finite_diff_stream.txt
labs/lab10/src/: finite_diff.py  finite_diff_stream.py  (+3 more)
labs/lab2/: README.md
reports/: template.tex
tools/utils/: LICENSE.md  README.md  pyproject.toml  requirements.txt
tools/utils/tests/: test_diff.py
tools/utils/utils/: __init__.py  diff.py  matrix.py  ode.py  optimize.py  sparse_matrix.py  vm_models.py
utils/: diff.py  optimize.py  sparse_matrix.py  vm_models.py
utils/python/: vm_models.py
utils/utils/: __init__.py  matrix.py
