[tool.poetry]
name = "utils"
version = "0.1.0"
description = "Micro lib useful for numerical methods course in HSE University"
authors = ["rmnigm"]
license = "LICENSE.md"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
numpy = "1.25.2"
numba = "0.58.0"
scipy = "^1.11.3"
sympy = "^1.12"
ruff = "^0.0.292"
mypy = "^1.6.0"
pytest = "^7.4.2"
flake8 = "^6.1.0"
pytest-timeout = "^2.1.0"
flake8-pyproject = "^1.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.flake8]
max-line-length = 120
max-doc-length = 120
exclude = "test_*.py"

[tool.pytest.ini_options]
timeout = 60
python_files = "test_*.py"
testpaths = ["tests"]

[tool.mypy]
no_incremental = true
ignore_missing_imports = true
warn_unreachable = true
exclude = [
    "tests/",
    ".tmp/",
    ".venv/"]